--- a/common/common.scss
+++ b/common/common.scss
@@ -164,6 +164,7 @@ ol.category-breadcrumb {
 .nav-pills>li>a {
   font-size: inherit;
   padding-right: 0;
+  padding-left: 0;
   margin-right: 1rem;
   border-bottom: 2px solid transparent;
 
